--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,5 @@
     </string>
 
     <string name="default_selected_facility">시설을 선택해주세요...</string>
+    <string name="msg_save_facility_success">저장이 완료되었습니다.</string>
 </resources>
